infra/terraform/backend/k8s-manifests/ingress-haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-haproxy
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: haproxy
    cert-manager.io/cluster-issuer: letsencrypt-haproxy
    haproxy.org/rate-limit: "30"
    haproxy.org/rate-limit-period: "1s"
    haproxy.org/timeout-client: "30s"
    haproxy.org/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - haproxy.thany.click
    secretName: haproxy-tls-cert
  rules:
  - host: haproxy.thany.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
